--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -10,9 +10,15 @@
     .card{
         width: 40%;
         @include center;
-        box-shadow: 0 0 25px white;
+        box-shadow: 0 0 25px $white;
         label, h4 {
             color: $white;
+            position: relative;
+            .login-error-msg{
+                position: absolute;
+                color: red;
+                text-shadow: 0 0 10px $white;
+            }
         }
     }
 }
