--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -82,3 +82,33 @@
         }
     }
 }
+.photo-upload-container{
+    width: 150px;
+    height: 150px;
+    border: 1px solid silver;
+    margin: 0 auto;
+    position: relative;
+    border-radius: 10px;
+    background: $theme-color-light;
+    .icon{
+        @include center;
+        @include transition;
+        color: $white;
+        cursor: pointer;
+        .fa-camera{
+            &:hover{
+                transform: scale(1.3);
+            }
+
+        }
+    }
+}
+.primary-photo{
+    border: 2px solid violet;
+    &:after{
+        content: 'Primary';
+    }
+}
+.preview-photo{
+    cursor: pointer;
+}
