--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -112,3 +112,11 @@
 .preview-photo{
     cursor: pointer;
 }
+.order-product-photo{
+    width: 75px;
+}
+.details-area{
+    position: absolute;
+    right: 0;
+    top: 5px;
+}
