--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,5 +1,6 @@
 $theme-color: #662999;
 $theme-color-light: #a22bff;
 $theme-color-red: #dc2a13;
+$theme-color-disabled: #675674a3;
 $white: white;
 $silver: silver;
