--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -152,6 +152,11 @@ margin-top: 5px;
     box-shadow: 0 0 4px silver;
 }
 .order-details-confirmation{
+    table{
+        th,td{
+            font-size: 14px;
+        }
+    }
     h4{
         color: $theme-color;
     }
@@ -163,4 +168,38 @@ margin-top: 5px;
             font-size: 14px;
         }
     }
+}
+.table-image{
+    width: 50px;
+}
+.sm-table{
+    th, td{
+        font-size: 14px;
+    }
+}
+.bar-code-area-wraper{
+    box-shadow: 0 0 10px silver;
+    margin: 25px auto 25px auto;
+    width: 595px;
+    height: 842px;
+}
+.print-area
+{
+    
+    padding: 36px;
+    display: flex;
+    flex-wrap: wrap;
+    .bar-code-items{
+        width: 33.33%;
+        padding: 18px;
+        text-align: center;
+        font-size: 14px;
+        border: 1px solid #e8e8e8;
+        height: fit-content;
+    }
+}
+.deleted{
+    color: red;
+    text-decoration: line-through;
+    font-size: 12px;
 }
