--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -182,6 +182,7 @@ margin-top: 5px;
     margin: 25px auto 25px auto;
     width: 595px;
     height: 842px;
+    text-align: -webkit-center;
 }
 .print-area
 {
